# QAria2

./: .gitignore  CMakeLists.txt  karia2.cpp  karia2.h  karia2.qrc  karia2.ui  main.cpp  settings.h
forms/: mainwindow.ui
images/: default.png2
include/: core.hpp  mainwindow.hpp
src/: core.cpp  main.cpp  mainwindow.cpp
translations/: karia2_it.ts
trunk/: karia2.cpp  karia2.pro  karia2.ui  main.cpp
trunk/images/: default.xpm
trunk/translations/: karia2_en.qm  karia2_en.ts  karia2_it.qm
